# AutoCamera

./: .gitignore  LICENSE  README.md  arduino.sh
car/: car.ino
control/: .pylintrc  control.py  gui.py  receiver.py  start.bat
realsense/: .gitignore  install.sh
realsense/python/: test.py
realsense/realsense-2.0-rasp4b/: Dockerfile  build.sh  publish.sh
realsense/realsense-cpp/: Dockerfile  init.sh  run.sh  stop.sh
realsense/realsense-cpp/cpp/: CMakeLists.txt  buildrun.sh
realsense/realsense-cpp/cpp/src/: publish.sh  realsense.cpp  socket.cpp  socket.h
stepper/: stepper.ino
